add common components module. add toolbar header

--- a/Angular/Gulin/src/app/components/header/header.component.html
+++ b/Angular/Gulin/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
-<p>
-  header works!
-</p>
+<md-toolbar color="primary">
+  <button md-icon-button>
+    <md-icon>menu</md-icon>
+  </button>
+  <span>Custom Toolbar</span>
+</md-toolbar>
+<!--<md-icon>home</md-icon>-->
