--- a/Angular/Gulin/src/app/components/header/header.component.css
+++ b/Angular/Gulin/src/app/components/header/header.component.css
@@ -1,49 +1,19 @@
-/*.hamburger {*/
-  /*display: block;*/
-  /*position: relative;*/
-  /*overflow: hidden;*/
-  /*margin: 0;*/
-  /*padding: 0;*/
-  /*width: 96px;*/
-  /*height: 96px;*/
-  /*font-size: 0;*/
-  /*text-indent: -9999px;*/
-  /*cursor: pointer;*/
-  /*outline: none;*/
-  /*background: none;*/
-  /*border: 0;*/
-/*}*/
-.hamburger{
-  border: 0;
-  color: #fff;
+.toolbar{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
-
-/*.hamburger span {*/
-  /*display: block;*/
-  /*position: absolute;*/
-  /*top: 44px;*/
-  /*left: 18px;*/
-  /*right: 18px;*/
-  /*height: 8px;*/
-  /*background: #fff;*/
-/*}*/
-
-/*.hamburger span::before,*/
-/*.hamburger span::after {*/
-  /*display: block;*/
-  /*position: absolute;*/
-  /*left: 0;*/
-  /*width: 100%;*/
-  /*height: 8px;*/
-  /*background-color: #fff;*/
-  /*content: "";*/
-/*}*/
-
-/*.hamburger span::before {*/
-  /*top: -20px;*/
-/*}*/
-
-/*.hamburger span::after {*/
-  /*bottom: -20px;*/
-/*}*/
-
+.buttons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.title{
+    display: flex;
+    width: 8%;
+}
+.flex-spacer {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
