--- a/Angular/Gulin/src/styles.css
+++ b/Angular/Gulin/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+.flex-spacer[_ngcontent-c1] {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+main-photo{
+    background-image: url('assets/i/main-photo.jpg');
+    width: 60px;
+    height: 120px;
+}
+
